# legal-mcp

./: README.md  pyproject.toml  server.json
legal_mcp/: __init__.py  aggregate.py  models.py  server.py
legal_mcp/sources/: __init__.py  base.py  courtlistener.py
