[project]
name = "legal-mcp"
version = "0.1.0"
description = "Remotely callable MCP server for US legal research (CourtListener baseline)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MCPServings" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.scripts]
legal-mcp = "legal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legal_mcp"]
